Fix mobile overflow bug

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,6 @@ h6 {
   --very-light-grey: hsl(0, 0%, 98%);
 }
 
-html,
 body {
   overflow-x: hidden;
 }
